# esp32-boilerplate

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  THIRD-PARTY-NOTICES.md  package.xml  sdkconfig  testClient.py  testServer.py
.github/workflows/: cmake.yml
cmake/catkin/: common.cmake
cmake/clang-tools/: clang-format.cmake  clang-tidy.cmake
cmake/doxygen/: doxygen.cmake
cmake/esp-idf/: CMakeLists.txt  CMakeLists.txt.in  requirements.txt  toolchain-esp32.cmake
cmake/freertos/: common.cmake
cmake/googletest/: common.cmake
cmake/propolis/: common.cmake
include/hal/: hal.hpp  ihal.hpp
include/spi/: spi.hpp
ros/: broker_config.yaml  communication_broker.launch  generators.cmake  hive_connect.launch  hive_connect_multiple_nodes.launch
scripts/: build-esp32.sh  build.sh  run-esp32.sh  run.sh
src/: CMakeLists.txt  main.c  main.cpp
src/bsp/: CMakeLists.txt
src/bsp/common/: CMakeLists.txt
src/bsp/common/include/common/: CRC.h
src/bsp/common/src/: CRC.cpp
src/bsp/common/tests/: CMakeLists.txt  CRCTests.cpp
src/bsp/include/bsp/: Container.h  Factory.h  IBSP.h  ILogger.h  ISpiStm.h  IUserInterface.h
src/bsp/src/: CMakeLists.txt
src/bsp/src/esp/: CMakeLists.txt
src/bsp/src/esp/hal/: pin_map.h  spi_callbacks.c  spi_callbacks.h
src/bsp/src/esp/include/: BSP.h  Logger.h  SpiHeader.h  SpiStm.h  UserInterface.h
src/bsp/src/esp/src/: BSP.cpp  Container.cpp  Factory.cpp  Logger.cpp  SpiStm.cpp  SpiStmMock.cpp  UserInterface.cpp
src/bsp/src/posix/: CMakeLists.txt
src/bsp/src/posix/include/: BSP.h  ROSLogger.h  SpiStm.h  SpiStmMock.h  System.h  UserInterface.h
src/bsp/src/posix/src/: BSP.cpp  Container.cpp  Factory.cpp  ROSLogger.cpp  SpiStmMock.cpp  System.cpp  UserInterface.cpp
src/bsp/src/posix/tests/: BSPTests.cpp  CMakeLists.txt
src/esp32/: CMakeLists.txt
src/esp32/stub/: CMakeLists.txt
src/esp32/stub/include/: esp_system.h
src/esp32/stub/src/: cpu_start.c  cpu_start.cpp  system_api.c
src/freertos/: CMakeLists.txt
src/freertos/esp/: CMakeLists.txt
src/freertos/posix/: CMakeLists.txt
src/freertos/posix/config/: CMakeLists.txt
src/freertos/stub/: CMakeLists.txt
src/freertos/stub/include/freertos/: task.h
src/freertos/stub/src/: platform_freertos_hooks.c  task.c
src/hal/: CMakeLists.txt  hal.cpp
src/logger/: CMakeLists.txt
src/logger/include/logger/: LoggerContainer.h
src/logger/src/: Logger.cpp  LoggerContainer.cpp
src/logger/tests/: CMakeLists.txt  LoggerUnitTests.cpp
src/logger/tests/mocks/: UserInterfaceMock.h
src/message-handler/: CMakeLists.txt
src/message-handler/include/message-handler/: IMessageDispatcher.h  INetworkAPIHandler.h  ISwarmApiRequestHandler.h  MessageDispatcher.h  MessageHandlerContainer.h  MessageSender.h  NetworkAPIHandler.h  NetworkDeserializer.h  NetworkSerializer.h  SwarmApiRequestHandler.h
src/message-handler/src/: MessageDispatcher.cpp  MessageHandlerContainer.cpp  MessageSender.cpp  NetworkAPIHandler.cpp  NetworkDeserializer.cpp  NetworkSerializer.cpp  SwarmApiRequestHandler.cpp
src/message-handler/tests/: CMakeLists.txt  DTOMatchers.h  MessageDispatcherUnitTests.cpp  MessageSenderUnitTests.cpp  NetworkApiHandlerUnitTests.cpp  NetworkSerializerAndDeserializerIntegrationTests.cpp
src/message-handler/tests/mocks/: BSPMock.h  NetworkAPIHandlerMock.h  NotificationQueueInterfaceMock.h
src/network/: CMakeLists.txt
src/network/esp/: CMakeLists.txt  DefaultNetworkConfig.cmake
src/network/esp/include/: DefaultNetworkConfig.in.h  NetworkConfig.h  NetworkContainer.h  NetworkManager.h  SocketFactory.h  TCPClient.h  TCPServer.h
src/network/esp/src/: NetworkConfig.cpp  NetworkContainer.cpp  NetworkManager.cpp  SocketFactory.cpp  TCPClient.cpp  TCPServer.cpp
src/network/include/: IAbstractNetworkManager.h  INetworkBroadcast.h  INetworkDeserializer.h  INetworkInputStream.h  INetworkManager.h  INetworkOutputStream.h  INetworkSerializer.h  NetworkConfig.h  NetworkContainer.h
src/network/ros/: CMakeLists.txt
src/network/src/: CMakeLists.txt  NetworkConfig.cpp
src/network/src/common/: CMakeLists.txt
src/network/src/common/include/: AbstractNetworkManager.h
src/network/src/common/src/: AbstractNetworkManager.cpp
src/network/src/esp/: CMakeLists.txt  DefaultNetworkConfig.cmake
src/network/src/esp/include/: DefaultNetworkConfig.in.h  NetworkBroadcast.h  NetworkConfig.h  NetworkManager.h  SocketFactory.h  TCPClient.h  TCPServer.h
src/network/src/esp/src/: NetworkBroadcast.cpp  NetworkConfig.cpp  NetworkContainer.cpp  NetworkManager.cpp  SocketFactory.cpp  TCPClient.cpp  TCPServer.cpp
src/network/src/ros/: CMakeLists.txt
src/network/src/ros/include/: DummyNetworkInputStream.h  DummyNetworkManager.h  DummyNetworkOutputStream.h  DummyNetworkSerializer.h  NetworkBroadcast.h  NetworkInputStream.h  NetworkManager.h  NetworkOutputStream.h
src/network/src/ros/src/: NetworkBroadcast.cpp  NetworkContainer.cpp  NetworkInputStream.cpp  NetworkManager.cpp  NetworkOutputStream.cpp
src/network/src/ros/src/broker/: CMakeLists.txt  CommunicationBroker.cpp  CommunicationBroker.h  main.cpp
src/network/src/ros/src/broker/config/: TopicDefines.h
src/network/src/ros/tests/: BroadcastTests.cpp  CMakeLists.txt  NetworkManagerUnitTests.cpp  UnicastCommunicationUnitTests.cpp
src/network/src/ros/tests/launch/: broadcast_tests.launch  broker_config.yaml  network_manager_tests.launch
src/network/src/ros/tests/mocks/: BSPMock.h  BroadcastMock.h  NetworkManagerMock.h
src/os/: CMakeLists.txt
src/os/freertos/: CMakeLists.txt
src/os/posix/: CMakeLists.txt
src/spi/: CMakeLists.txt  spi.cpp
src/spi_flash/: CMakeLists.txt
src/spi_flash/stub/: CMakeLists.txt
src/spi_flash/stub/include/: esp_spi_flash.h
src/spi_flash/stub/src/: flash_ops.c
src/taskManager/: CMakeLists.txt
src/taskManager/include/taskManager/: AbstractTask.h
src/taskManager/src/: AbstractTask.cpp
tests/: CMakeLists.txt
tests/src/hal/: CMakeLists.txt  hal_tests.cpp
tests/src/spi/: CMakeLists.txt  spi_tests.cpp
tools/: run-clang-format.py
(+7 files in other folders)
